@@ -2,6 +2,8 @@ Version CVS HEAD (?)
 
   * packaging changes:
     - added Mac OSX XCode project files (patch by Toshi Nagata)
+    - Dev-C++ (win32) project file is automatically updated with
+      the version info from configure.in
 
   * src/DLS.cpp, src/DLS.h:
     - added Sampler::AddSampleLoop() and Sampler::DeleteSampleLoop() methods
